add custom adapter example

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,14 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="right"
+        android:text="Custom Adapter"
+        android:onClick="gotoCustomAdapterExample"
+        />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="left"
         android:text="gridview"
         android:onClick="gotoGridViewExample"/>
